# notmuch-address-exporter

./: .gitignore  README.md  default.nix  pyproject.toml
src/notmuch_address_exporter/: __init__.py  cli.py  export.py
